get team by id endpoint
