# routes/team.routes.js
@@ -1,11 +1,15 @@
 const { Router } = require('express')
 const { check } = require('express-validator')
-const { addTeam, deleteTeam, updateTeamImage } = require('../controllers/team.controller')
+const { addTeam, deleteTeam, updateTeamImage, getTeamById } = require('../controllers/team.controller')
 const { checkFields } = require('../middlewares/check-fields')
 const { teamExists, findLeagueById, findTeamById } = require('../helpers/database-validators')
 const { checkImageFile } = require('../middlewares/check-image-file')
 
 const router = Router()
+
+router.get('/:teamId', [ 
+    check('teamId').not().isEmpty(),
+], getTeamById)
 
 router.post('/add', [
     checkImageFile,
